# contactlist-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  package-lock.json  package.json  runner
config/: config.json  schema.json
config/styling/: main.scss
docs/: README.md  build.md  config.md
old/config/: config.json  connection.json  connection.sample.json
old/config/src/: main.rs
src/: build.rs  lib.rs  main.rs  routes.rs
src/db/: mod.rs  types.rs
templates/: footer.html  header.html  main.html  new.html  results.html  search.html  table.html
templates_old/: delconfirm.html  edit.html  header.html  view.html
