[package]
name = "contactlist"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.35"
hex = "0.4.3"
image = "0.24.9"
indexmap = { version = "2.2.5", features = ["serde"] }
minifier = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
chrono = "0.4.35"
comrak = "0.21.0"
indexmap = { version = "2.2.5", features = ["serde"] }
json-objects-to-csv = "0.1.3"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
simple-logging = "2.0.2"
tera = "1.19.1"
couch_rs = "0.10.1"