[package]
name = "contactlist"
version = "0.1.0"
edition = "2021"
#build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-lab = "0.20.2"
chrono = "0.4.38"
comrak = "0.21.0"
indexmap = { version = "2.6.0", features = ["serde"] }
json-objects-to-csv = "0.1.3"
log = "0.4.22"
lysine = { git = "https://github.com/ctcl-bregis/lysine.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
simple-logging = "2.0.2"
tera = "1.20.0"
couch_rs = "0.10.1"
